tests/ui/hashmap/hashset_generics.stderr
error[E0369]: binary operation `==` cannot be applied to type `HashSet<String, String>`
  --> $DIR/hashset_generics.rs:8:5
   |
LL | #[derive(PartialEq)]
   |          --------- in this derive macro expansion
...
LL |     pub parameters: HashSet<String, String>,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the foreign item type `String` doesn't implement `BuildHasher`
  --> $SRC_DIR/alloc/src/string.rs:LL:COL
   |
   = note: not implement `BuildHasher`
help: you might have intended to use a HashMap instead
  --> $DIR/hashset_generics.rs:8:5
   |
LL | #[derive(PartialEq)]
   |          --------- in this derive macro expansion
...
LL |     pub parameters: HashSet<String, String>,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0369`.
